# terraform-aws-rds-private-subnet-db-provisioner

./: .checkov.yaml  .gitignore  .tool-versions  LICENSE  README.md  artifact.tf  buildspec.yml  data.tf  image.tf  kms.tf  lambda.tf  main.tf  package-artifact.sh  pyproject.toml  s3.tf  variables.tf  versions.tf
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: terraform_check_formatting.yml  terraform_static_analysis.yml  terratest.yml
example/: main.tf  variables.tf
function/: Dockerfile  main.py  pyproject.toml
test/: go.mod  go.sum  provisioner_test.go
test/tf/: .terraform.lock.hcl  main.tf
